# zeropool

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  HN_SUBMISSION.md  LICENSE  README.md  clippy.toml  roadmap.md  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
benches/: allocation_patterns.rs  cache_behavior.rs  memory_features.rs  pool.rs  pool_comparison.rs
benches/common/: competitors.rs  mod.rs  sizes.rs  touch.rs
examples/: profile_hotpath.rs  profile_mt.rs  test_config.rs
profiling/: README.md  file_pipeline.rs  ml_checkpoint_loader.rs  network_server.rs  stress_test.rs
scripts/: README.md  bench-full.sh  bench.py  pyproject.toml
scripts/src/zeropool_scripts/: __init__.py
src/: allocator.rs  buf.rs  buffer.rs  config.rs  global.rs  lib.rs  metrics.rs  pool.rs  size_class.rs  stats.rs  tls.rs  utils.rs
