[package]
name = "zeropool"
version = "0.2.0"
edition = "2024"
authors = ["Botir Khaltaev"]
description = "High-performance buffer pool with constant-time allocation, thread-safe operations, and 5x speedup over bytes crate"
repository = "https://github.com/botirk38/zeropool"
license = "MIT OR Apache-2.0"
keywords = ["buffer", "pool", "io", "performance", "zero-copy"]
categories = ["memory-management", "data-structures"]
readme = "README.md"

[dependencies]
parking_lot = "0.12.5"
region = "3.0"

[dev-dependencies]
criterion = "0.7"
sharded-slab = "0.1"
bytes = "1.5"
lifeguard = "0.6"
deadpool = "0.12"
tokio = { version = "1", features = ["rt", "macros"] }
object-pool = "0.6"

[profile.bench]
debug = true

[[bench]]
name = "pool_comparison"
harness = false

[[bench]]
name = "allocation_patterns"
harness = false

[[bench]]
name = "cache_behavior"
harness = false

[[bench]]
name = "memory_features"
harness = false
