[package]
name = "zeropool"
version = "0.7.0"
edition = "2024"
authors = ["Botir Khaltaev"]
description = "A user-space byte allocator with size-class bucketing, lock-free shared pool, and thread-local caching"
repository = "https://github.com/botirk38/zeropool"
license = "MIT OR Apache-2.0"
keywords = ["allocator", "buffer", "pool", "performance", "lock-free"]
categories = ["memory-management", "data-structures"]
readme = "README.md"

# =============================================================================
# Lint Configuration
# =============================================================================
# Main Clippy configuration is in clippy.toml
# Formatting configuration is in rustfmt.toml
#
# This section defines lint levels for the crate.
# Strategy: Deny critical issues, warn on quality/style issues

[lints.rust]
# Unsafe is allowed in this crate when documented and contained.
unsafe_code = "allow"
# Enforce documentation for public API
missing_docs = "warn"
# Warn on missing debug implementations
missing_debug_implementations = "warn"
# Catch unused items
unused = { level = "warn", priority = -2 }

[lints.clippy]
# =============================================================================
# DENY: Critical correctness, safety, and performance issues
# =============================================================================
# These will fail compilation - must be fixed immediately
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
undocumented_unsafe_blocks = { level = "deny", priority = -1 }
missing_safety_doc = { level = "deny", priority = -1 }

# =============================================================================
# WARN: Code quality, style, and best practices
# =============================================================================
# These will show warnings - should be addressed before release
# Use lower priority (-2) so specific lint settings can override these groups
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
complexity = { level = "warn", priority = -2 }
style = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }

# =============================================================================
# ALLOW: Pragmatic exceptions for performance-critical code
# =============================================================================
# These are intentionally allowed for valid reasons in this codebase

# Performance optimizations
inline_always = "allow"            # Used deliberately for hot paths
cast_possible_truncation = "allow" # Intentional in shard indexing
cast_precision_loss = "allow"      # Acceptable for metrics/stats
cast_sign_loss = "allow"           # Safe in context
uninit_vec = "allow"               # set_len on u8 vecs — all bit patterns valid

# Code organization
module_name_repetitions = "allow" # pool::Pool is idiomatic
similar_names = "allow"           # shard/shard_idx clear in context
too_many_lines = "allow"          # Some init functions are long but linear
struct_excessive_bools = "allow"  # Config structs need many options

# API design
must_use_candidate = "allow"       # Prefer explicit #[must_use]
return_self_not_must_use = "allow" # Builder pattern returns Self
missing_errors_doc = "allow"       # Panic-based error handling
missing_panics_doc = "allow"       # Panics are for invariant violations

# Unsafe code (already have SAFETY comments)
multiple_unsafe_ops_per_block = "allow" # Sometimes needed for atomicity

# Pedantic style preferences
doc_markdown = "allow"       # Allow flexibility in doc formatting
option_if_let_else = "allow" # Sometimes more readable

[dependencies]
crossbeam-queue = "0.3"
region = "3.0"

# Comparison crates — only compiled with `--features bench`
sharded-slab = { version = "0.1", optional = true }
bytes = { version = "1.5", optional = true }
object-pool = { version = "0.6", optional = true }
opool = { version = "0.2.0", optional = true }
mimalloc = { version = "0.1.52", optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.7.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tcmalloc-better = { version = "0.1.19", optional = true }

[dev-dependencies]
criterion = "0.7"

[features]
default = []
bench = ["dep:sharded-slab", "dep:bytes", "dep:object-pool", "dep:opool"]
bench-alloc-mimalloc = ["dep:mimalloc"]
bench-alloc-tcmalloc = ["dep:tcmalloc-better"]
bench-alloc-jemalloc = ["dep:tikv-jemallocator"]

[[bench]]
name = "pool"
harness = false
